--- a/public/subscribe.html
+++ b/public/subscribe.html
@@ -2,6 +2,7 @@
   <head>
     <title>Express</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="manifest" href="/manifest.json">
   </head>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="
